[package]
name = "emscripten-val"
version = "0.1.1"
edition = "2021"
description = "A Rust wrapper around the emscripten/val api"
homepage = "https://github.com/MoAlyousef/emscripten-val"
repository = "https://github.com/MoAlyousef/emscripten-val"
keywords = ["emscripten", "bindings"]
categories = ["api-bindings", "wasm"]
license = "MIT"

[dependencies]
emscripten-val-sys = { path = "emscripten-val-sys", version = "0.1.0" }

[package.metadata.docs.rs]
default-target = "wasm32-unknown-emscripten"