[package]
name = "emscripten-val-sys"
version = "0.1.3"
edition = "2021"
description = "A low-level Rust wrapper around the emscripten/val api"
homepage = "https://github.com/MoAlyousef/emscripten-val"
repository = "https://github.com/MoAlyousef/emscripten-val"
keywords = ["emscripten", "bindings"]
categories = ["api-bindings", "wasm"]
license = "MIT"

[build-dependencies]
cc = "1"
